force-app/main/default/objects/Ownership_Occupation__c/Ownership_Occupation__c.object-meta.xml
<CustomObject>
    <description>Used for to enter FLCs Owner's Occupation</description>
    <label>Ownership Occupation</label>
    <nameField>
        <displayFormat>RA-{000000000}</displayFormat>
        <label>Ownership Occupation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership Occupations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>