force-app/main/default/objects/Ownership_Occupation__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Used for Owners Occupation</description>
    <inlineHelpText>Enter Employer Name</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>