force-app/main/default/objects/Ownership_Occupation__c/fields/Owners_Frist_Name__c.field-meta.xml
<CustomField>
    <fullName>Owners_Frist_Name__c</fullName>
    <inlineHelpText>Enter Owner's First Name</inlineHelpText>
    <label>Owners Frist Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>