force-app/main/default/objects/Ownership_Occupation__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>Master Detail relation to Ownership object</description>
    <label>Ownership</label>
    <referenceTo>Ownership__c</referenceTo>
    <relationshipLabel>Ownership Occupations</relationshipLabel>
    <relationshipName>Ownership_Occupations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>