force-app/main/default/objects/Ownership_Occupation__c/fields/Physical_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Line_1__c</fullName>
    <description>Used for Ownership occupation</description>
    <inlineHelpText>Enter Physical Address Line 1</inlineHelpText>
    <label>Physical Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>