force-app/main/default/objects/Ownership_Occupation__c/fields/Physical_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Line_2__c</fullName>
    <description>Used for Ownership Occupation</description>
    <inlineHelpText>Enter Physical Address Line 2</inlineHelpText>
    <label>Physical Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>