force-app/main/default/objects/Ownership_Occupation__c/fields/Physical_City_Province__c.field-meta.xml
<CustomField>
    <fullName>Physical_City_Province__c</fullName>
    <description>Used for Owners Occupation</description>
    <inlineHelpText>Enter Physical City</inlineHelpText>
    <label>Physical City/ Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>