force-app/main/default/objects/Ownership_Occupation__c/fields/Physical_Country__c.field-meta.xml
<CustomField>
    <fullName>Physical_Country__c</fullName>
    <description>Used for Owners Occupation</description>
    <inlineHelpText>Select Country</inlineHelpText>
    <label>Physical Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Countries</valueSetName>
    </valueSet>
</CustomField>