force-app/main/default/objects/Ownership_Occupation__c/fields/Physical_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Physical_Postal_Code__c</fullName>
    <description>Used for Owners Occupation</description>
    <inlineHelpText>Enter Postal Code</inlineHelpText>
    <label>Physical Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>