force-app/main/default/objects/Ownership_Occupation__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <description>Used for Owners Occupation</description>
    <inlineHelpText>Select State</inlineHelpText>
    <label>Physical State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>