force-app/main/default/objects/Ownership_Occupation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Used for FLC Owner's Occupation</description>
    <inlineHelpText>Enter Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>