force-app/main/default/objects/Ownership_Occupation__c/recordTypes/Ownership_Occupation.recordType-meta.xml
<RecordType>
    <fullName>Ownership_Occupation</fullName>
    <active>false</active>
    <label>Ownership Occupation</label>
</RecordType>